--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rangista</title>
     <meta name="description" content="Rangista brings artsy, traditional hand-painted fashion for women and children. Shop Eid, Bakra Eid, Azadi and Birthday collections in PKR." />
-    <link rel="icon" href="https://i.postimg.cc/KYZqc2Yr/Screenshot-2025-10-02-105818.png" type="image/png" />
+    <link rel="icon" href="https://kinoqnxhesqzhvstrxtn.supabase.co/storage/v1/object/sign/product%20images/Screenshot%202025-08-23%20104405.png?token=eyJraWQiOiJzdG9yYWdlLXVybC1zaWduaW5nLWtleV8yN2EzNThlOS1hZDQzLTQ4ZGEtYjAzYy04OWJhOTc0MDRkOTciLCJhbGciOiJIUzI1NiJ9.eyJ1cmwiOiJwcm9kdWN0IGltYWdlcy9TY3JlZW5zaG90IDIwMjUtMDgtMjMgMTA0NDA1LnBuZyIsImlhdCI6MTc2MDc5MzYxOSwiZXhwIjoxNzkyMzI5NjE5fQ.IpCKecfYRLZS3ujp9MV8TL-88DfRvP7Mpe8wrYCO1UM" type="image/png" />
   </head>
 
   <body>
